Crud clientes backend

--- a/Vendas/Views/Shared/_Layout.cshtml
+++ b/Vendas/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="@Url.Action("About", "Home")">
+                        <a href="@Url.Action("Index", "Clientes")">
                             <i class="ti-user"></i>
                             <p>Clientes</p>
                         </a>
