--- a/Vendas/Views/Clientes/Index.cshtml
+++ b/Vendas/Views/Clientes/Index.cshtml
@@ -2,6 +2,134 @@
 @{
     ViewBag.Title = "Clientes";
 }
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar bar1"></span>
+                <span class="icon-bar bar2"></span>
+                <span class="icon-bar bar3"></span>
+            </button>
+            <a class="navbar-brand" href="#">@ViewBag.Title</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="ti-panel"></i>
+                        <p>Stats</p>
+                    </a>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="ti-bell"></i>
+                        <p class="notification">5</p>
+                        <p>Notifications</p>
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Notification 1</a></li>
+                        <li><a href="#">Notification 2</a></li>
+                        <li><a href="#">Notification 3</a></li>
+                        <li><a href="#">Notification 4</a></li>
+                        <li><a href="#">Another notification</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="ti-settings"></i>
+                        <p>Settings</p>
+                    </a>
+                </li>
+            </ul>
 
-<h2>@ViewBag.Title</h2>
+        </div>
+    </div>
+</nav>
 
+<div class="content">
+    <div class="container-fluid">
+        <div class="content table-responsive table-full-width">
+
+            @*<button class="btn btn-default">
+                <i class="fa fa-plus"></i>Default
+            </button>*@
+            <div class="row">
+                <div class="col-md-5">
+                    <table id="clienteTable" class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>E-mail</th>
+                        </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+                <div class="col-lg-5 col-md-7">
+                    <div class="card">
+                        <div class="header">
+                            <h4 class="title">Adicionar Cliente</h4>
+                        </div>
+                        <div class="content">
+                            <div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label>Nome</label>
+                                            <input id="txt_nome" type="text" class="form-control border-input" placeholder="Nome">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label>Email</label>
+                                            <input id="txt_email" type="email" class="form-control border-input" placeholder="Email">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="text-center">
+                                    <button id="btn_incluir" class="btn btn-success btn-fill btn-wd">Salvar</button>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@*<div class="nav-tabs-navigation">
+    <div class="nav-tabs-wrapper">
+        <ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
+            <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
+            <li><a href="#profile" data-toggle="tab">Profile</a></li>
+            <li><a href="#messages" data-toggle="tab">Messages</a></li>
+        </ul>
+    </div>
+</div>
+<div id="my-tab-content" class="tab-content text-center">
+    <div class="tab-pane active" id="home">
+        <p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient. With a smooth metal surface that seamlessly meets the new Retina HD display.</p>
+    </div>
+    <div class="tab-pane" id="profile">
+        <p>Here is your profile.</p>
+    </div>
+    <div class="tab-pane" id="messages">
+        <p>Here are your messages.</p>
+    </div>
+</div>*@
+
+@section Scripts{
+    <script>
+        var tituloPagina = '@ViewBag.Title';
+        var url_listar = '@Url.Action("Listar", "Clientes")';
+        var url_adicionar = '@Url.Action("Cadastrar","Clientes")';
+        var url_getCliente = '@Url.Action("Cliente","Clientes")';
+    </script>
+    <script src="~/Scripts/Cadastro/Cliente.js"></script>
+}
