--- a/Vendas/Views/Clientes/Index.cshtml
+++ b/Vendas/Views/Clientes/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Vendas.Models.Cliente>
 @{
     Layout = "~/Views/Shared/_Cadastro.cshtml";
-    ViewBag.Title = "Usuários";
+    ViewBag.Title = "Clientes";
     ViewBag.Lista = Model;
 }
 
@@ -47,9 +47,7 @@
 
             foreach (var item in Model)
             {
-
-                    @:linhas.push(@Html.Raw(Json.Encode(item)));
-
+                @:linhas.push(@Html.Raw(Json.Encode(item)));
             }
         }
     </script>
