--- a/Vendas/Views/Shared/_Layout.cshtml
+++ b/Vendas/Views/Shared/_Layout.cshtml
@@ -29,17 +29,7 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
                             <li>@Html.ActionLink("Produto", "Index", "Produtos")</li>
-                            <li>@Html.ActionLink("Locais de armazenamento", "Index", "CadLocalArmazenamento")</li>
-                            <li>@Html.ActionLink("Unidades de medida", "Index", "CadUnidadeMedida")</li>
-                            <li>@Html.ActionLink("Produtos", "Index", "CadProduto")</li>
-                            <li class="nav-divider"></li>
-                            <li>@Html.ActionLink("Países", "Index", "CadPais")</li>
-                            <li>@Html.ActionLink("Estados", "Index", "CadEstado")</li>
-                            <li>@Html.ActionLink("Cidades", "Index", "CadCidade")</li>
-                            <li>@Html.ActionLink("Fornecedores", "Index", "CadFornecedor")</li>
-                            <li class="nav-divider"></li>
-                            <li>@Html.ActionLink("Perfis de Usuários", "Index", "CadPerfil")</li>
-                            <li>@Html.ActionLink("Usuários", "Index", "CadUsuario")</li>
+                            <li>@Html.ActionLink("Venda", "Index", "Venda")</li>
                         </ul>
                     </li>
                     <li>
@@ -48,10 +38,6 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Entrada de produtos", "Index", "OperEntradaProduto")</li>
-                            <li>@Html.ActionLink("Saída de produtos", "Index", "OperSaidaProduto")</li>
-                            <li>@Html.ActionLink("Lançamento de perdas de produtos", "LancPerdaProduto", "Operacao")</li>
-                            <li>@Html.ActionLink("Inventário de estoque", "Index", "OperInventario")</li>
                         </ul>
                     </li>
                     <li>
@@ -60,8 +46,6 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Posição do Estoque", "PosicaoEstoque", "Relatorio")</li>
-                            <li>@Html.ActionLink("Ressuprimento", "Ressuprimento", "Relatorio")</li>
                         </ul>
                     </li>
                     <li>
@@ -70,8 +54,6 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Perdas por mês", "PerdaMes", "Grafico")</li>
-                            <li>@Html.ActionLink("Entradas vs saídas por mês", "EntradaSaidaMesa", "Grafico")</li>
                         </ul>
                     </li>
                 </ul>
