--- a/Vendas/Views/Clientes/Index.cshtml
+++ b/Vendas/Views/Clientes/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Vendas.Models.Cliente>
 @{
-    Layout = "~/Views/Shared/_Cadastro.cshtml";
+    Layout = "~/Views/Vendas/_Cadastro.cshtml";
     ViewBag.Title = "Clientes";
     ViewBag.Lista = Model;
 }
@@ -62,4 +62,5 @@
         </tr>
     </script>
     <script src="~/Scripts/Cadastro/Cliente.js"></script>
+    <script src="~/Scripts/moment.js"></script>
 }
