item venda front end

--- a/Vendas/Views/Clientes/Index.cshtml
+++ b/Vendas/Views/Clientes/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Vendas.Models.Cliente>
 @{
-    Layout = "~/Views/Vendas/_Cadastro.cshtml";
+    Layout = "~/Views/Shared/_Cadastro.cshtml";
     ViewBag.Title = "Clientes";
     ViewBag.Lista = Model;
 }
