--- a/Vendas/Views/Vendas/Index.cshtml
+++ b/Vendas/Views/Vendas/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Vendas.Models.Venda>
 @{
-    Layout = "~/Views/Vendas/_Cadastro.cshtml";
+    Layout = "~/Views/Shared/_Cadastro.cshtml";
     ViewBag.Title = "Vendas";
     ViewBag.Lista = Model;
 }
