--- a/Vendas/Views/Produtos/Index.cshtml
+++ b/Vendas/Views/Produtos/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Vendas.Models.Produto>
 @{
-    Layout = "~/Views/Vendas/_Cadastro.cshtml";
+    Layout = "~/Views/Shared/_Cadastro.cshtml";
     ViewBag.Title = "Produtos";
     ViewBag.Lista = Model;
 }
