--- a/Vendas/Views/Shared/_Layout.cshtml
+++ b/Vendas/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
                             <li>@Html.ActionLink("Produto", "Index", "Produtos")</li>
-                            <li>@Html.ActionLink("Venda", "Index", "Venda")</li>
+                            <li>@Html.ActionLink("Venda", "Index", "Vendas")</li>
                         </ul>
                     </li>
                     <li>
@@ -38,6 +38,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Itens na Venda", "Index", "ItensVenda")</li>
                         </ul>
                     </li>
                     <li>
@@ -57,7 +58,6 @@
                         </ul>
                     </li>
                 </ul>
-
             </div>
         </div>
     </div>
@@ -65,7 +65,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Controle de Estoque</p>
+            <p>&copy; @DateTime.Now.Year - Vendas</p>
         </footer>
     </div>
 
